--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!--no one can see this-->
             <img src="img/logo-96X96.svg" alt="The original bird" width="100" length="100">
 
-            <h2>About me</h2>  
+            <h2>About me!</h2>  
 
         </header>
 
