--- a/index.html
+++ b/index.html
@@ -86,7 +86,24 @@
         
             <section id="gallery">
                     <h2>Photo Gallery</h2>
-                    
+
+                <figure>
+                    <img src="img/gaming-640w.jpg" alt="gaming pc">
+                    <figcaption>This is the gaming PC I recently got</figcaption>
+                </figure>
+                <hr>
+                <figure>
+                    <img src="img/working-out-640w.jpg" alt="weight">
+                    <figcaption>I took a picture of a 25 pount weight &#128076; &#128512;</figcaption>
+                </figure>
+                <hr>
+                <figure>
+                    <img src="img/pool-640w.jpg" alt="pool">
+                    <figcaption>Dont mind the robot cleaner in the pool, its winter i cant take a picture of the pool. </figcaption>
+                </figure>
+                <hr>
+
+                    <!--
                     <figure>
                         <div class="row">
                             <div class="column">
@@ -109,6 +126,7 @@
                         </figure>
                     </div>
                 </section>
+            -->
             </section>
 
 
