--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
 
             <section id="hero">
 
-                    <img src="img/avataaars.png" alt="Kevin Vojtek is chilling in very vold winter day with a hat and sweater on">
+                    <img src="img/avataaars.png" alt="Kevin Vojtek is chilling in very cold winter day with a hat and sweater on">
                 <p>
                     Kevin Vojtek <br>
-                    
-
                 </p>
 
             </section>
