--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
 
         <section id="contact">
             <h3>Contact Me</h3>
-            <form id="contactForm" name="contactform" data-netlify="true" method="post"> 
+            <form id="contactform" name="contacform" data-netlify="true" method="post">
                 <fieldset>
                         <legend>Contact Form</legend>
 
-                    <div id="formElements">
+                    <div id="formelements">
                         <!--Name-->
                         <label for="name">Name (required)</label>
                         <input type="text" id="name" name="name" required>
@@ -147,10 +147,10 @@
                         <label for="email">Email (required)</label>
                         <input type="email" id="email" name="email" required>
                         <!--Phone-->
-                        <label for="phone">Phone (optinal)</label>
+                        <label for="phone">Phone (optional)</label>
                         <input type="tel" id="tel" name="phone">
                         <!--Phone type-->
-                        <label for="phonetype" name="phonetype">Phonetype (optinal)</label>
+                        <label for="phonetype" name="phonetype">Phone type (optional)</label>
                         <select  id="phonetype">
                             <option value=""selected>Select phone type</option>
                             <option value="Mobile">Mobile</option>
@@ -158,16 +158,15 @@
                             <option value="Home">Home</option>
                         </select>
                         <!--Message-->
-                        <label for="message">Message (optinal)</label>
+                        <label for="message">Message (optional)</label>
                         <textarea name="message" id="message" cols="30" rows="10"></textarea>
-                        
                         <!--Reply-->
                         <fieldset>
                             <Legend>Would you like to reply?</Legend>
                             <ul>
                                 <li>
                                     <input type="radio" id="message-yes" value="Yes a reply please" name="reply">
-                                    <label for="message-yes">Yes a reply would be nice</label>
+                                    <label for="message-yes">Yes, a reply would be nice</label>
                                 </li>
                                 <li>
                                     <input type="radio" id="message-no" name="reply" value="no reply please" checked>
@@ -179,13 +178,12 @@
                         <!--Submit-->
 
                         <Button type="submit">Submit</Button>
-
                     </div>
                 </fieldset>
-
             </form>
-
         </section>
+
+
         </main>
 
 
