--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <textarea name="message" id="message" cols="30" rows="10"></textarea>
                         <!--Reply-->
                         <fieldset>
-                            <Legend>Would you like to reply?</Legend>
+                            <Legend>Would you like a reply?</Legend>
                             <ul>
                                 <li>
                                     <input type="radio" id="message-yes" value="Yes a reply please" name="reply">
