--- a/index.html
+++ b/index.html
@@ -17,12 +17,21 @@
     <body>
 
         <header>
+            <nav class="navbar">
+                <div class="logo">
+                    <img src="img/logo-96X96.svg" alt="The original bird" width="100" length="100">
 
-            <!--no one can see this-->
-            <img src="img/logo-96X96.svg" alt="The original bird" width="100" length="100">
-
-            <h1>About me!</h1>  
-
+                    <h1>About me!</h1>  
+                </div>
+                <div class="navbar-links">
+                    <ul>
+                        <li><a href="#bio">Bio</a></li>
+                        <li><a href="#gallery">Gallery</a></li>
+                        <li><a href="#book">Book</a></li>
+                        <li><a href="#contact">Contact Me</a></li>
+                    </ul>
+                </div>
+            </nav>
         </header>
 
         <main>
