--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Open+Sans&display=swap" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <link href="css/nav.css" rel="stylesheet">
 
     </head>
 
