Complete nav bar

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 
     </head>
 
-    <body>
-
+    <body> 
+    
         <header>
+            <div class="logo">
+                <img src="img/logo-96X96.svg" alt="The original bird" width="100" length="100">
+                <h1>About me!</h1> 
+            </div>
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav class="navbar">
-                <div class="logo">
-                    <img src="img/logo-96X96.svg" alt="The original bird" width="100" length="100">
-
-                    <h1>About me!</h1>  
-                </div>
+                
                 <div class="navbar-links">
                     <ul>
                         <li><a href="#bio">Bio</a></li>
@@ -33,6 +34,9 @@
                     </ul>
                 </div>
             </nav>
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+            </label>
         </header>
 
         <main>
